--- a/MavenPractice/pom.xml
+++ b/MavenPractice/pom.xml
@@ -12,6 +12,11 @@
   <version>6.8</version>
   <scope>test</scope>
 </dependency>
+<dependency>
+ <groupId>org.seleniumhq.selenium</groupId>
+ <artifactId>selenium-java</artifactId>
+ <version>2.47.1</version>
+</dependency>
   
   </dependencies>
   <properties>
@@ -51,14 +56,6 @@
 </plugins>
  
 </build>
-  
-  
-  
-  
-  
-  
-  
-  
-  
+
   
 </project>
